tests/NormalTests/paczka1/fuzzy1/87295273.err
Error in line 1: AYs A289 73,0
Error in line 3: AYs S327 16,3
Error in line 6: AYs A660 44,1
Error in line 15: g		S3 S327 7,0
Error in line 9: g11S3 A289 45,6
Error in line 26: OyCmdOd8t S695 66,4
Error in line 25: 9v9fT1mn A289 69,9
Error in line 27: OyCmdOd8t A660 89,2
Error in line 19: g11S3 S327 21,0
